--- a/src/app/plans/plans-modal/plans-modal.component.html
+++ b/src/app/plans/plans-modal/plans-modal.component.html
@@ -1,24 +1,24 @@
-<h1 mat-dialog-title>Editando plano <b>{{data.name}}</b></h1>
+<h1 mat-dialog-title>Editando plano <b>{{obj.name}}</b></h1>
 <div mat-dialog-content>
     <p>Nome</p>
     <mat-form-field>
-        <input matInput [(ngModel)]="data.name">
+        <input matInput [(ngModel)]="obj.name">
     </mat-form-field>
     <p>Dia da cobrança</p>
     <mat-form-field>
-        <input matInput [(ngModel)]="data.dayOfMonth">
+        <input matInput [(ngModel)]="obj.dayOfMonth">
     </mat-form-field>
     <p>Período</p>
     <mat-form-field>
-        <input matInput [(ngModel)]="data.period">
+        <input matInput [(ngModel)]="obj.period">
     </mat-form-field>
     Data final
     <mat-form-field>
-        <input matInput [(ngModel)]="data.finalDate">
+        <input matInput [(ngModel)]="obj.finalDate">
     </mat-form-field>
 
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button (click)="udpate()" cdkFocusInitial>Ok</button>
+    <button mat-button (click)="update()" cdkFocusInitial>Ok</button>
 </div>
