--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid login">
+<!-- <div class="container-fluid login">
   <div class="row login-row">
     <div class="col-lg-6 col-md-6 login-card">
       <div class="card">
@@ -27,4 +27,22 @@
       </div>
     </div>
   </div>
+</div> -->
+<div class="hgroup">
+  <h2>Decore Móveis</h2>
+  <h4>Backoffice</h4>
 </div>
+<form>
+  <div class="group">
+    <input [(ngModel)]="loginParams.mail" type="email" name="email"><span class="highlight"></span><span class="bar"></span>
+    <label>Usuário</label>
+  </div>
+  <div class="group">
+    <input [(ngModel)]="loginParams.password" type="password" name="password"><span class="highlight"></span><span
+      class="bar"></span>
+    <label>Senha</label>
+  </div>
+  <button type="button" class="button buttonBlue" (click)="login()">Entrar
+    <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+  </button>
+</form>
