--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -3,21 +3,21 @@
     <div class="row">
       <div class="col-md-12">
         <div class="card">
-          <div class="card-header card-header-danger">
-            <h4 class="card-title ">Produtos</h4>
+          <div class="card-header card-header-light" style="background: linear-gradient(60deg, #3c4858, #3c4858);">
+            <h4 class="card-title" style="color: white;">Produtos</h4>
             <p class="card-category">Listagem de produtos no sistema</p>
             <div class="row">
-              <div class="col-md-10">
+              <div class="col-md-8">
               </div>
-              <div class="col-md-2 text-right">
-                <button class="btn btn-success" (click)="newProduct()">Novo produto</button>
+              <div class="col-md-4 text-right">
+                <button class="btn btn-default" style="box-shadow: none" (click)="newProduct()">Novo produto</button>
               </div>
             </div>
           </div>
           <div class="card-body">
             <div class="table-responsive">
               <table class="table">
-                <thead class=" text-primary">
+                <thead>
                   <th>
                     ID
                   </th>
@@ -57,8 +57,8 @@
                     <td class="text-right">
                       <button class="btn btn-sm btn-warning" (click)="addPics(product.id)"><i class="material-icons">image</i>
                       </button>
-                      <button class="btn btn-sm btn-info" (click)="openDialog(plan)"><i class="material-icons">edit</i></button>
-                      <button class="btn btn-sm btn-danger"><i class="material-icons">delete</i></button>
+                      <button class="btn btn-sm btn-info" (click)="editProduct(product)"><i class="material-icons">edit</i></button>
+                      <button class="btn btn-sm btn-danger" (click)="disable(product.id)"><i class="material-icons">delete</i></button>
                     </td>
                   </tr>
                 </tbody>
