--- a/src/assets/scss/core/_forms.scss
+++ b/src/assets/scss/core/_forms.scss
@@ -393,19 +393,20 @@ fieldset[disabled] .form-group .form-control{
 .has-danger{
   .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label,
   .mat-form-field-empty.mat-form-field-label{
-    color: #f44336;
-  }
-  &.mat-focused{
-    .mat-input-underline{
-      .mat-input-ripple{
-        background-color: #f44336;
-      }
+    color: #3C4858;
+}
+
+&.mat-focused {
+    .mat-input-underline {
+        .mat-input-ripple {
+            background-color: #3C4858;
+        }
     }
-  }
+}
 }
 .ng-invalid{
   &.mat-focused .mat-form-field-label{
-    color: #f44336;
+    color: #3C4858;
   }
 }
 form .ng-valid{
